force-app/main/default/objects/General_Setting__mdt/General_Setting__mdt.object-meta.xml
<CustomObject>
    <description>All general setting used within the app. DeveloperName will be key and value will be one of Text Value, Numeric Value, or Boolean Value</description>
    <label>General Setting</label>
    <pluralLabel>General Setting</pluralLabel>
</CustomObject>