force-app/main/default/objects/General_Setting__mdt/fields/Boolean_Value__c.field-meta.xml
<CustomField>
    <fullName>Boolean_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean value of this record</description>
    <inlineHelpText>Boolean value of this record</inlineHelpText>
    <label>Boolean Value</label>
    <type>Checkbox</type>
</CustomField>