force-app/main/default/objects/General_Setting__mdt/fields/Date_Value__c.field-meta.xml
<CustomField>
    <fullName>Date_Value__c</fullName>
    <description>Date value of this record</description>
    <inlineHelpText>Date value of this record</inlineHelpText>
    <label>Date Value</label>
    <type>Date</type>
</CustomField>