force-app/main/default/objects/General_Setting__mdt/fields/Numeric_Value__c.field-meta.xml
<CustomField>
    <fullName>Numeric_Value__c</fullName>
    <description>Numeric value of this record</description>
    <inlineHelpText>Numeric value of this record</inlineHelpText>
    <label>Numeric Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>