force-app/main/default/objects/General_Setting__mdt/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <description>Some explanation of this record</description>
    <inlineHelpText>Some explanation of this record</inlineHelpText>
    <label>Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>