force-app/main/default/objects/General_Setting__mdt/fields/Text_Value__c.field-meta.xml
<CustomField>
    <fullName>Text_Value__c</fullName>
    <description>Text value of this record</description>
    <inlineHelpText>Text value of this record</inlineHelpText>
    <label>Text Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>